# bpf-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  justfile
.github/workflows/: bpf-rs.yml  rust.yml
bpf-dump/: Cargo.toml
bpf-feature/: .gitignore  Cargo.toml  README.md
bpf-feature/examples/: README.md  default-dump.rs  feature-probe-example.txt  feature-probe.rs  json-dump-example.json  json-dump.rs
bpf-feature/src/: bpf.rs  kernel_config.rs  lib.rs  misc.rs  runtime.rs  serde_ext.rs
bpf-inspect-common/: Cargo.toml  README.md
bpf-inspect-common/src/: lib.rs
bpf-obj-dump/: Cargo.toml  README.md
bpf-obj-dump/examples/: simple-dump.rs
bpf-obj-dump/src/: lib.rs
bpf-rs/: Cargo.toml  LICENSE  README.md
bpf-rs-macros/: Cargo.toml  README.md
bpf-rs-macros/src/: lib.rs
bpf-rs-macros/tests/: proc_macro_tests.rs
bpf-rs/src/: attach_type.rs  descriptor.rs  error.rs  helper.rs  insns.rs  lib.rs  map.rs  program.rs
src/: lib.rs
