[package]
name = "bpf-feature"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caps = "0.5.3"
flate2 = "1.0.22"
nix = "0.23.1"
thiserror = "1.0.30"
bpf-rs = { path = "../bpf-rs" }
libbpf-sys = { version = "0.7.0", package = "bpfdeploy-libbpf-sys" }
