[package]
name = "bpf-feature"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caps = "0.5.3"
flate2 = "1.0.22"
nix = "0.23.1"
thiserror = "1.0.30"
bpf-rs = { path = "../bpf-rs" }
serde = { version = "1.0.136", optional = true, features = ["derive"] }
bpf-rs-macros = { version = "0.0.0", path = "../bpf-rs-macros" }

[dev-dependencies]
serde_json = "1.0.79"

[features]
serde = ["dep:serde", "bpf-rs/serde"]
