[package]
name = "bpf-feature"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/bpfdeploy-io/bpf-rs"
homepage = "https://bpfdeploy.io"
description = "A library for eBPF feature detection"
keywords = ["bpf", "ebpf", "xdp", "linux", "kernel"]
license = "BSD-2-Clause"
authors = ["Milan <milan@mdaverde.com>", "bpfdeploy.io <team@bpfdeploy.io>"]

[dependencies]
flate2 = "1.0.22"
nix = "0.23.1"
thiserror = "1.0.30"
serde = { version = "1.0.136", optional = true, features = ["derive"] }
bpf-rs = { version = "0.2.0", path = "../bpf-rs" }
bpf-rs-macros = { version = "0.1.0", path = "../bpf-rs-macros" }

[dev-dependencies]
serde_json = "1.0.79"

[features]
serde = ["dep:serde", "bpf-rs/serde"]
