[package]
name = "bpf-rs-macros"
version = "0.0.1"
edition = "2021"
homepage = "https://bpfdeploy.io"
description = "Collection of proc macros used within bpf-rs and dependant crates."
keywords = ["bpf", "ebpf"]
license = "BSD-2-Clause"
authors = ["Milan <milan@mdaverde.com>"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.18"
syn = "1.0.92"

[features]
serde = []
