[package]
name = "bpf-rs"
version = "0.0.9"
edition = "2021"
repository = "https://github.com/bpfdeploy-io/bpf-rs"
homepage = "https://bpfdeploy.io"
description = "A safe, lean library for inspecting and querying eBPF objects"
keywords = ["bpf", "ebpf", "xdp", "linux", "kernel"]
license = "BSD-2-Clause"
authors = ["Milan <milan@mdaverde.com>", "bpfdeploy.io <team@bpfdeploy.io>"]

[dependencies]
num_enum = "0.5.7"
thiserror = "1.0.30"
libbpf-sys = { version = "0.7.1", package = "bpfdeploy-libbpf-sys" }
serde = { version = "1.0.136", optional = true, features = ["derive"] }
bpf-rs-macros = { version = "0.0.2", path = "../bpf-rs-macros" }

[features]
serde = ["dep:serde", "bpf-rs-macros/serde"]
