[package]
name = "bpf-rs"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/bpfdeploy-io/bpf-rs"
homepage = "https://bpfdeploy.io"
description = "A safe, lean library for inspecting and querying eBPF objects"
keywords = ["bpf", "ebpf", "xdp", "linux", "kernel"]
license = "BSD-2-Clause"
authors = ["Milan <milan@mdaverde.com>", "bpfdeploy.io <team@bpfdeploy.io>"]
rust-version = "1.60"

[dependencies]
num_enum = "0.5.7"
thiserror = "1.0.30"
libbpf-sys = "1.0.0"
serde = { version = "1.0.136", optional = true, features = ["derive"] }
bpf-rs-macros = { version = "0.1.0", path = "../bpf-rs-macros" }

[dev-dependencies]
bpfdeploy-libbpf-sys = "1.0.1"

[features]
serde = ["dep:serde", "bpf-rs-macros/serde"]
